ecere: Vanilla project and makefile fixes for OS X

--- a/ecere/Makefile
+++ b/ecere/Makefile
@@ -476,6 +476,7 @@ ifdef OSX_TARGET
 
 ifndef STATIC_LIBRARY_TARGET
 OFLAGS += \
+	 -L$(SYSROOT)/usr/X11/lib \
 	 -L/usr/X11R6/lib \
 	 -L../deps/jpeg-6b/obj/release.$(PLATFORM) \
 	 -L../deps/libpng-1.4.0/obj/release.$(PLATFORM) \
