Makefiles: Force building 32 or 64 bit by setting ARCH=32 or 64 - When ARCH is specified, build output goes in .x32 or .x64 - Fixed proper detection of Program Files on Windows - Got rid of compiler setting FORCE_32_BIT and FORCE_64_BIT (Replaced by ARCH setting) - Automatically installing in multilib path on Linux when not building .deb - Improved attempts to load libecere in alternate paths (Thanks Niraj) - Fixed all SDK makefiles to use $(COMPILER_SUFFIX)$(DEBUG_SUFFIX)

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -9,7 +9,7 @@ include ../default.cf
 
 all: ecp ecc ecs
 
-OBJ = libec/obj/$(CONFIG).$(TARGET_PLATFORM)/
+OBJ = libec/obj/$(CONFIG).$(TARGET_PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/
 
 libec:
 	@$(call echo,Building 2nd stage libec...)
