--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Build-Depends: debhelper (>= 9~),
                libffi-dev,
                libfontconfig1-dev,
                libfreetype6-dev,
+               libgif-dev,
                libgl1-mesa-dev,
                libgl1-mesa-glx,
                libjpeg62-dev,
