--- a/compiler/bootstrap/Makefile
+++ b/compiler/bootstrap/Makefile
@@ -1,5 +1,7 @@
 .PHONY: bindir ecere libec ecp ecc ecs cleantarget clean realclean distclean
+ifneq "$V" "1"
 .SILENT:
+endif
 
 OBJ = obj/bin.$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/
 
